# Kotoamatsukami

./: LICENSE  README.md  analysis.ipynb  commands.ipynb  data_analysis.ipynb  data_aquisition.ipynb  data_collection.ipynb  data_preprocessing.ipynb  decision_tree_model.ipynb  express_data_aquisition.ipynb  express_data_preprocessing.ipynb  express_model_randomforest.ipynb  express_model_xgboost.ipynb  hand_tracking.ipynb  knn_model.ipynb  live_testing.ipynb  logisticregression_model.ipynb  main.py  mlp_model.ipynb  model_decision_tree.ipynb  model_logisticregression.ipynb  model_mlp.ipynb  model_naive_bayes.ipynb  model_neuralnetwork.ipynb  model_randomforest.ipynb  model_svm.ipynb  model_testing.ipynb  model_xgboost.ipynb  naive_bayes_model.ipynb  pyproject.toml  quick.ipynb  randomforest_model.ipynb  randomized_data_analysis.ipynb  randomized_data_aquisition.ipynb  randomized_data_preprocessing.ipynb  reference  streamed_data_aquisition.ipynb  svm_model.ipynb  test.ipynb  xgboost_model.ipynb
cookbook/: cautions  context_testing.ipynb  fashion_mnist.ipynb  fashion_mnist.py  hand_tracking.ipynb  keyboard_test.ipynb  model_testing.ipynb  numba.ipynb
data/: closed_hand_data  open_hand_data  pointing_at_camera_data  swipe_data
inst/: Draft1base202ampflu.txt  Draft1base204ampflu.txt  Draft1base206ampflu.txt  Draft1base_aplificador_filtro.txt  Lab2.ipynb  noaa.ipynb  porto_weather_conditions  processed_porto_conds  sensor_corrente.txt  step_resistor_pot_angle_tran2.txt  trab_final.ipynb
kotoamatsukami/: __init__.py
models/: decision_tree  initial_4_classes_xgb_model  (+4 more)
(+207 files in other folders)
