[tool.poetry]
name = "kotoamatsukami"
version = "0.1.0"
description = "An AI backed virtual mouse."
authors = ["João Pedro Jacques Hoss <joaopedro_jh@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
wheel = "^0.37.0"
setuptools = "^59.6.0"
ipykernel = "^6.6.0"
nbformat = "^5.1.3"
tensorflow-gpu = "2.7.0"
scipy = "^1.7.3"
numpy = "^1.21.5"
plotly = "^5.5.0"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
