[tool.poetry]
name = "kotoamatsukami"
version = "0.1.0"
description = "An AI backed virtual control system"
authors = ["João Pedro Jacques Hoss <joaopedro_jh@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
wheel = "^0.37.1"
setuptools = "^60.5.0"
tensorflow-gpu = "2.7.0"
numpy = "1.21.5"
numba = "0.55.0rc1"
Pillow = "^9.0.0"
pandas = "1.3.5"
opencv-python = "^4.5.5"
mediapipe = "^0.8.9"
openpyxl = "^3.0.9"
scipy = "^1.8.0"
tqdm = "^4.64.0"
sklearn = "^0.0"
pydot = "^1.4.2"
graphviz = "^0.19.1"
noaa-sdk = "^0.1.21"
beautifulsoup4 = "^4.11.1"
lxml = "^4.8.0"
html5lib = "^1.1"
selenium = "^4.1.3"

[tool.poetry.dev-dependencies]
ipykernel = "^6.6.1"
plotly = "^5.5.0"
nbformat = "^5.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
